# tap-eu-ted

./: README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml  lint.yml  test.yml
tap_eu_ted/: __init__.py  client.py  streams.py  tap.py
tap_eu_ted/tests/: __init__.py  test_core.py
