[tool.poetry]
name = "tap-eu-ted"
version = "0.0.1"
description = "`tap-eu-ted` is a Singer tap for Tenders Electronic Daily, built with the Meltano Singer SDK."
authors = ["Hinnerk Gnutzmann"]
keywords = [
    "ELT",
    "Tenders Electronic Daily",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.10"
singer-sdk = { version="^0.20.0"}
fs-s3fs = { version = "^1.1.1", optional = true}
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
tox = "^4.4.4"
pytest = "^7.2.1"
flake8 = "^5.0.4"
black = "^22.12.0"
pydocstyle = "^6.2.1"
mypy = "^0.991"
isort = "^5.12.0"
types-requests = "^2.28.11.7"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_eu_ted"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-eu-ted = 'tap_eu_ted.tap:TapTendersElectronicDaily.cli'
